--- a/site hk/style.css
+++ b/site hk/style.css
@@ -1,101 +1,128 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 
 :root{
---var-cor-fundoDarkblue: #081b29;
---var-cor-fundoLightBlue: #;
+--cor-fundoDarkblue: #081b29;
+--cor-fundoLightBlue: #00ffff;
+--branco: #ffff;
 }
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins';
+    font-family: "Chakra Petch", sans-serif;
 }
 
-section{
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    padding: 100px;
-    background: linear-gradient(#081b29, #00ffff);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden;
+body{
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+background: url(p3p.jpg) no-repeat;
+background-size: cover;
+background-position: center;
 }
 
-.search-box{
-    width: 350px;
-    background: #fff;
-    margin: 100px auto 0;
-    border-radius: 5px ;
-    
+.wrapper{
+width: 420px;
+background:var(--branco);
+border: 2px solid rgb(255, 255, 255);
+backdrop-filter: blur(20px);
+box-shadow: 0 0 10px rgba(0,0,1,.5);
+border-radius: 10px;
+padding: 30px 40px;
 }
-    
-    .row{
-    display: flex;
-    align-items: center;
-    padding: 10px 10px;
-    height:35px ;
-    width:250px;
-    
-   }
-    
-    input{
-    flex: 2;
-    height: 20px;
-    background: transparent;
-    border: 0;
-    outline: 0;
-    font-size: 15px;
-    color:black; 
-    }
-    
-    button{
-    background:var(--var-cor-fundoLightBlue);
-    cursor: pointer;
-    color: var(--var-cor-fundoLightBlue);
-    transform: scale(1.2);
-    width:20px ;
-    margin-left:35px;
+
+.wrapper h1 {
+font-size: 36px;
+text-align: center;
 }
-    
-    ::placeholder{
-    color:black;
-    }
-    
-    .result-box{
-        border-top: 1px solid #999;
-        padding: 15px 10px;
-    }
-    
-    .result-box ul li{
-        list-style: none;
-        border-radius:3px ;
-        padding: 15px 10px;
-        cursor: pointer;
-    }
-    
+
+.wrapper .input-box{
+position: relative;
+width: 100%;
+height: 50px;
+background: #dfdede;
+margin: 30px 0;
+}
+
+.input-box input{
+width: 100%;
+height: 100%;
+background: transparent;
+border: none;
+outline: none;
+border: 2.5px solid rgb(255, 255, 255);
+border-radius: 2px;
+font-size: 16px;
+color: black;
+padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder{
+    color: #0000003d;
+}
+
+.input-box i {
+position: absolute;
+transform: translateY(60%);
+font-size: 20px;
 
 
+}
 
+.wrapper .remember-forgot{
+display: flex;
+justify-content: space-between;
+font-size: 14.5px; ;
+margin:-15px 0 15px;
+}
 
+.remember-forgot label input{
+accent-color: #ffff;
+margin-right: 3px;
+}
 
+.remember-forgot a{
+color: #ffff;
+text-decoration: none;
+}
 
+.remember-forgot a:hover{
+text-decoration: underline;
+}
 
+.wrapper .btn{
+width: 100%;
+height: 45px;
+background: #ffff;
+border: none;
+outline: none;
+border-radius: 3px;
+box-shadow: 0 0 25px rgba(0,0, 10,.25);
+cursor: pointer;
+font-size:16px ;
+color:#333 ;
+font-weight: 600;
+}
 
+.wrapper.register-link{
+font-size: 14.5px;
+text-align: center;
+margin: 20px 0 15px;
+}
 
+.register-link p a {
+color: #ffff;
+text-decoration: none;
+font-weight: 600;
+}
 
-
-
-
-
-
-
-
-
-
+.register-link p a:hover{
+text-decoration: underline;
+}
 
 
 
